# goit-python-web-homework-14

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.db
contacts_book/: schemas.py
contacts_book/conf/: config.py  messages.py
contacts_book/database/: db.py  models.py
contacts_book/repository/: contacts.py  users.py
contacts_book/routes/: auth.py  contacts.py  users.py
contacts_book/services/: auth.py  cloud_image.py  email.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1177feb31a85_fifth.py  4975ee1e0299_avatar_fix.py  5643c937f9ac_avatar.py  71c4f1e4a821_third.py  7d68757e79e7_email_conf.py  85b6ff132555_second.py  9c2ac4da5351_users.py  c0828412e42c_init.py  c74247965951_fourth.py
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
